Update and rename appusage to appusage.json

--- a/data/appusage.json
+++ b/data/appusage.json
@@ -1,4 +1,6 @@
 [
+  {
+   "name": "table",
     {
         "Name":  "AERTSr64",
         "Mem":  704512
@@ -426,5 +428,6 @@
     {
         "Name":  "wscript",
         "Mem":  1130496
+    }
     }
 ]
