--- a/data/appusage.json
+++ b/data/appusage.json
@@ -1,6 +1,11 @@
-  {
-   "name": "table",
-  [
+  
+
+  "data": [
+    {
+      "name": "table",
+      "values": [
+        
+      
     {
         "Name":  "AERTSr64",
         "Mem":  704512
@@ -429,6 +434,6 @@
         "Name":  "wscript",
         "Mem":  1130496
     }
-    ]
-  }
-
+   ]
+}
+]
